syntax = "proto3";
package POGOProtos.Map.Fort;

message IncidentLookup {
	string incident_id = 1;
	string fort_id = 2;
	double fort_lat = 3;
	double fort_lng = 4;
}
