syntax = "proto3";
package POGOProtos.Networking.Requests.Messages;

message GetLocalTimeMessage {
	repeated int64 timestamp_ms = 1;
}
